@@ -1,9 +1,7 @@
 #!/usr/bin/make -f
 
-CFLAGS = `dpkg-buildflags --get CFLAGS`
-CFLAGS += -Wall
-CFLAGS += `dpkg-buildflags --get CPPFLAGS`
-LDFLAGS = `dpkg-buildflags --get LDFLAGS`
+CFLAGS:=$(shell dpkg-buildflags --get CFLAGS) $(shell dpkg-buildflags --get CPPFLAGS) -Wall
+LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS)
 # export necessary for (hardening) flags for perl
 # (src/http/modules/perl/Makefile.PL).
 export CFLAGS LDFLAGS
