@@ -3,6 +3,7 @@ nginx (1.4.5-2) UNRELEASED; urgency=medium
   [ Christos Trochalakis ]
   * debian/rules:
     + Avoid double declaration of hardening flags.
+    + Expand buildflags so the build log is easier to follow.
 
  -- Christos Trochalakis <yatiohi@ideopolis.gr>  Tue, 18 Feb 2014 08:52:30 +0200
 
